# Gapstars_hack_AI

./: AGENT.md  README.md  main.py  pyproject.toml
agents/: meeting_summarizer.py
backend/: .env.example  .gitignore  README.md  main.py  meetings.db  pyproject.toml  test_db_init.py  test_full_flow.py  test_websocket.py
backend/agents/: action_item_agent.py  chat_agent.py  followup_agent.py  meeting_summarizer.py  project_chat_agent.py  project_summary_agent.py  translator_agent.py
backend/db/: __init__.py  db.py
backend/evals/: eval_runner.py  golden_evals.json  metrics.py  summary_1.txt  summary_3.txt  transcript_1.txt  transcript_2.txt
backend/example/transcripts/: Creston & Folke LLP.txt  Product Roadmap Sprint Kickoff.txt  Q3 Budget Review — Vortex Analytics Inc.txt
backend/prompts/: action_item_prompt.md  chat_prompt.md  followup_prompt.md  project_chat_prompt.md  project_summary_prompt.md  summarizer_prompt.md
backend/schema/: meeting_schema.py
backend/utils/: __init__.py  file_processor.py  utils.py
example/transcripts/: Tangent Creative Co.txt  Vendor Contract Renewal — Nexora Supply Chain.txt
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.vue  style.css
prompts/: translator_prompt.md
schema/: meeting_schema.py
