[project]
name = "meeting-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.8.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "schema*", "prompts*"]
